# SeekerDApp

./: .eslintignore  .gitignore  Anchor.toml  App.tsx  CLAUDE.md  README.md  STATUS.md  TODOS.md  app.json  globals.js  index.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tsconfig.json
__tests__/: App-test.tsx  audit-regressions.test.ts  auth.test.ts  base64.test.ts  errors.test.ts  explorer.test.ts  sgt.test.ts  transfer.test.ts
android/: build.gradle  gradle.properties  keystore.properties.example  settings.gradle
components/: AboutContent.tsx  AccountInfo.tsx  AutoGiveCard.tsx  CircleProgress.tsx  Colors.tsx  CommunityList.tsx  ConfirmModal.tsx  ConnectButton.tsx  DepositModal.tsx  DisconnectButton.tsx  ErrorBoundary.tsx  GiveChoiceModal.tsx  GlassCard.tsx  GlimpseCard.tsx  Header.tsx  NavIcons.tsx  NeedCard.tsx  OnboardingModal.tsx  PresetChip.tsx  RequestAirdropButton.tsx  Section.tsx  SettingsSheet.tsx  SignMessageButton.tsx  SignTransactionButton.tsx  SplashOverlay.tsx  StreakCard.tsx  VaultCard.tsx
config/: donationConfig.ts  env.ts
dapp-store/: .asset-manifest.json  config.yaml  icon-source.html  review.html
data/: content.ts  donationConfig.ts  journeyContent.ts  mockData.ts  recipients.ts
docs/: FINAL-CHECK.md  Glimpse_Business_Overview.docx  HANDOFF-CODEX-LAUNCH.md  SOUL.md  (+6 more)
programs/glimpse-escrow/: Cargo.toml
programs/glimpse-escrow/src/: constants.rs  error.rs  lib.rs  state.rs
programs/glimpse-escrow/src/instructions/: disburse.rs  donate.rs  initialize_need.rs  mod.rs
programs/glimpse-escrow/tests/: escrow_test.rs
(+220 files in other folders)
