[package]
name = "glimpse-escrow"
version = "0.1.0"
description = "Glimpse escrow program — on-chain donation vaults for verified needs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "glimpse_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
