[package]
name = "glimpse-escrow"
version = "0.1.0"
description = "Glimpse escrow program — on-chain donation vaults for verified needs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "glimpse_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
litesvm = "0.2"
solana-sdk = "1.18"
solana-program = "1.18"
spl-token = { version = "4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3", features = ["no-entrypoint"] }
borsh = "0.10"
sha2 = "0.10"
